# datalint

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
app/components/: __init__.py  distribution_charts.py  issues_table.py  module_explorer.py  score_card.py  sidebar.py
app/components/image/: __init__.py  image_grid.py  image_module_explorer.py
auditor/: __init__.py
auditor/checks/: __init__.py  distribution.py  importance.py  leakage.py
auditor/core/: __init__.py  engine.py  loader.py  scorer.py
auditor/image/: __init__.py
auditor/image/checks/: __init__.py  anomalies.py  distribution.py  duplicates.py  integrity.py  labels.py
auditor/image/utils/: __init__.py
auditor/report/: __init__.py  builder.py  renderer_cli.py  renderer_html.py  renderer_json.py
auditor/tabular/checks/: __init__.py  dedup.py
auditor/tabular/utils/: __init__.py
auditor/templates/: report.html.j2
auditor/utils/: logger.py  stats.py
cli/: main.py  ui.py
examples/: run_audit.py
omnilint/: __init__.py
omnilint/app/: streamlit_app.py
omnilint/app/components/: distribution_charts.py
omnilint/app/components/image/: __init__.py
omnilint/cli/: main.py  ui.py
omnilint/core/: __init__.py  engine.py
omnilint/image/: __init__.py
omnilint/image/checks/: __init__.py  anomalies.py  distribution.py  duplicates.py  integrity.py  labels.py
omnilint/image/utils/: __init__.py  clip_encoder.py  phash.py  pixel_stats.py
omnilint/report/: __init__.py  builder.py  renderer_cli.py  renderer_html.py  renderer_json.py
omnilint/tabular/: __init__.py
omnilint/tabular/checks/: __init__.py  basic.py  labels.py
omnilint/tabular/utils/: embeddings.py  logger.py
tests/image/: __init__.py  conftest.py  test_anomalies.py  test_distribution.py  test_duplicates.py  test_integrity.py  test_labels.py
tests/tabular/: conftest.py  test_basic.py  test_dedup.py  test_distribution.py  test_importance.py  test_labels.py  test_leakage.py  test_scorer.py
